--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -19,11 +19,11 @@
       <div class="wrapper">
         <div class="head">
           <img
-            src="assets/logo_Powbet.svg"
+            src="assets/pow-ger.gif"
             alt=""
             class="logo"
-            width="87"
-            height="24"
+            width="118"
+            height="66"
           />
           <img
             src="assets/777_BlewndingMode_Lighten.png"
@@ -46,18 +46,14 @@
             width="273"
             height="44"
           />
-          <img
-            src="assets/CTA.svg"
-            alt=""
-            class="head-cta-button"
-            width="154"
-            height="44"
-          />
+          <a href="put link here" class="head-cta-button">
+            <img src="assets/CTA.svg" alt="" width="154" height="44" />
+          </a>
         </div>
         <div class="steps">
           <picture>
             <source
-              media="(min-width:1024px)"
+              media="(min-width:1024px)  and (orientation: landscape) "
               orientation="landspace"
               srcset="assets/123/1_desktop.png"
             />
@@ -71,7 +67,7 @@
           </picture>
           <picture>
             <source
-              media="(min-width:1024px)"
+              media="(min-width:1024px)  and (orientation: landscape) "
               srcset="assets/123/2_desktop.png"
             />
             <img
@@ -84,7 +80,7 @@
           </picture>
           <picture>
             <source
-              media="(min-width:1024px)"
+              media="(min-width:1024px)  and (orientation: landscape) "
               srcset="assets/123/3_desktop.png"
             />
             <img
@@ -106,7 +102,7 @@
 
         <div class="payments">
           <img
-            src="assets/Payment_logos/Visa.svg"
+            src="assets/Payment_logos/visa.svg"
             alt=""
             class="payment"
             height="16"
@@ -125,7 +121,7 @@
             height="36"
           />
           <img
-            src="assets/Payment_logos/skrill.svg"
+            src="assets/Payment_logos//skrill.svg"
             alt=""
             class="payment"
             height="16"
