--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             height="44"
           />
           <a href="put link here" class="head-cta-button">
-            <img src="assets/CTA.svg" alt="" width="154" height="44" />
+            <img src="assets/CTA.svg" class="cta-img" width="154" height="44" />
           </a>
         </div>
         <div class="steps">
@@ -148,14 +148,14 @@
             Powbet only accepts customers over 18 years of age.
           </p>
 
-          <button class="terms-button">
+          <a class="terms-button" href="put link here">
             <img
               src="assets/Button_terms-and-conditions.svg"
               alt=""
               width="180"
               height="36"
             />
-          </button>
+          </a>
         </footer>
       </div>
     </div>
