--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
             height="44"
           />
           <a href="put link here" class="head-cta-button">
-            <img src="assets/CTA.svg" class="cta-img" width="154" height="44" />
+            <img
+              src="assets/CTA.svg"
+              class="head-cta-button-img"
+              width="154"
+              height="44"
+            />
           </a>
         </div>
         <div class="steps">
@@ -102,7 +107,7 @@
 
         <div class="payments">
           <img
-            src="assets/Payment_logos/Visa.svg"
+            src="assets/Payment_logos/visa.svg"
             alt=""
             class="payment"
             height="16"
@@ -136,24 +141,24 @@
 
         <footer>
           <p>
-            Powbet.com website is owned and operated by Pabidi NV., a company
-            incorporated under the laws of Curacao with company registration
-            number 151791 and having its registered address at Scharlooweg 39,
-            Willemstad, Curacao, licensed by Antillephone E-Gaming license No.
-            8048/JAZ, authorized by the Government of Curacao. Tilaros Limited,
-            a company incorporated under the laws of Cyprus with company
-            registration number HE 406322 and having its registered address at 4
-            Promitheos st,1065, Nicosia, Cyprus, provides payment management
-            services to Pabidi N.V. Gambling can be addictive. Play responsibly.
-            Powbet only accepts customers over 18 years of age.
+            Die Seite von Powbet.com ist Eigentum von Rabidi NV und wird von
+            Rabidi NV betrieben, einem nach den Gesetzen von Curacao gegründeten
+            Unternehmen mit der Firmenregistrierungsnummer 151791 und der
+            registrierten Adresse Scharlooweg 39, Willemstad, Curacao,
+            lizenziert von Antillephone NV, E-Gaming-Lizenznr. 8048 /JAZ,
+            autorisiert von der Regierung von Curacao. Tilaros Limited ist eine
+            nach zypriotischem Recht eingetragene Gesellschaft mit der
+            Firmenregistrierungsnummer HE 406322 und der eingetragenen Adresse
+            Viktoros Ougko 8, 2107 Nicosia, Cyprus, erbringt
+            Zahlungsverwaltungsdienste für Rabidi N.V. Glücksspiel kann süchtig
+            machen. Spielen Sie verantwortungsbewusst. Powbet akzeptiert nur
+            Kunden über 18 Jahre.
           </p>
-
-          <a class="terms-button" href="put link here">
+          <a href="put link here" class="terms-button">
             <img
               src="assets/Button_terms-and-conditions.svg"
+              class="terms-button-img"
               alt=""
-              width="180"
-              height="36"
             />
           </a>
         </footer>
