--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           />
           <a href="put link here" class="head-cta-button">
             <img
-              src="assets/CTA.svg"
+              src="assets/CTA.png"
               class="head-cta-button-img"
               width="154"
               height="44"
